# core1

./: core1.ipynb  core10.ipynb  core11.ipynb  core2.ipynb  core3.ipynb  core4.ipynb  core5.ipynb  core6.ipynb  core7.ipynb  core8.ipynb  core9.ipynb  pyproject.toml
dl/: core8.ipynb  pyproject.toml
