[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Morkand <cpaezpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
